# serialization2

./: .editorconfig  CMakeLists.txt  LICENSE  README.md
include/: serialization.hpp
include/serialization/: archive.hpp  binary_iarchive.hpp  binary_oarchive.hpp  iarchive.hpp  oarchive.hpp  text_iarchive.hpp  text_oarchive.hpp
include/serialization/detail/: load_dispatch.hpp  save_dispatch.hpp
test/: CMakeLists.txt
test/src/: integral.cpp  serialization_test_utility.hpp
